Fixed header alignment

--- a/app/components/styles/ChatContainer.scss
+++ b/app/components/styles/ChatContainer.scss
@@ -52,12 +52,12 @@ $chatContainerBottomRight: 24px;
     color: #fff;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     font-weight: 300;
     font-size: 14px;
     padding: 0 30px;
     align-items: stretch;
+    text-align: center;
   }
 
   .banner {
